fixes some text alignment issues

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -344,11 +344,11 @@
       }
 
       .mint-button div {
-        background: #22c55e;
+        background: #62810D;
         border-radius: 20px;
         width: 120px;
         height: 50px;
-        border: 1px solid #16a34a;
+        border: 1px solid rgb(21 128 61);
         box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
       }
 
